src/styles/style.css
@import url(https://fonts.googleapis.com/css?family=Oswald&v1);

html {
  overflow-y: scroll;
  font-family: "Oswald";
}

body {
  background-color: #fefeff;
}

h1 {
  font-size: clamp(24pt, 8vw, 40pt);
  letter-spacing: 0.12em;
  height: auto;
  width: 100%;
  margin: 0;
}

main,
header,
footer {
    width: 100%;
    max-width: 990px;
    margin: auto;
    padding: 0 15px;
    box-sizing: border-box;
}

header {
    min-height: 200px;
    height: auto;
    display: flex;
    flex-wrap: wrap;
    align-items: flex-start;
}

main {
  font-size: 10pt;
  
  color: #1f1f1f;
  letter-spacing: 0.09em;
}

li {
  list-style: none;
}

a {
  color: #1f1f1f;
  text-decoration: none;
}

a:hover {
  color: #4c617f;
}

#about {
  flex: 1 1 300px;
  min-width: 0;
  height: auto;
  padding-left: 10px;
  font-size: 9pt;
  color: #72787f;
  letter-spacing: 0.12em;
  text-align: justify;
  margin-bottom: 15px;
}

#content {
  padding-top: 15px;
}

#contactInfo {
  flex: 0 0 auto;
  padding: 0 10px;
  font-size: 10.5pt;
  letter-spacing: 0.08em;
  font-weight: 500;
  height: auto;
  text-align: right;
}

#split {
  width: 100%;
  height: 10px;
  background-color: #4c617f;
  text-align: center;
  flex-basis: 100%;
}

#contactInfo li {
  list-style: none;
}

#projects {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 15px;
}

#projects div {
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  width: 307px;
  height: 123px;
  text-align: center;
}

#projects div span {
  position: relative;
  top: 100px;
  color: white;
  font-size: 12pt;
}

#the-confines-of-space {
  background: url(../../static/images/confines.jpg);
}

#dissonics {
  background: url(../../static/images/dissonics.jpg);
}

#bindu-shards {
  background: url(../../static/images/bindu.jpg);
}

#ghosts-of-union-square {
  background: url(../../static/images/ghosts.jpg);
}

#planting-steps {
  background: url(../../static/images/planting.jpg);
}

#hand-crank-drum-machine {
  background: url(../../static/images/drums.jpg);
}

#slippery-slopes {
  background: url(../../static/images/slippery.jpg);
}

#stickman-fight {
  background: url(../../static/images/stickman.jpg);
}

#we-have-you-now {
  background: url(../../static/images/wehaveyounow.jpg);
}

.back {
  font-size: 11pt;
  float: right;
}

.back:hover {
  color: #4c617f;
  cursor: hand;
}

.noHover:hover {
  color: #1f1f1f;
}

.projectContent {
  flex: 1 1 auto;
  min-width: 0;
}

.projectText {
  text-align: justify;
  width: 100%;
  max-width: 580px;
  margin-right: 10px;
  float: right;
}

.projectTitle {
  font-size: 23pt;
}

.upperSection {
  float: right;
  text-align: right;
  width: 100%;
  max-width: 590px;
  margin-right: 10px;
}

.myTitle {
  color: #72787f;
  font-size: 12pt;
}

/* Tablet/mobile breakpoint - single column under 990px */
@media (max-width: 990px) {
  header {
    flex-direction: column;
    align-items: flex-start;
  }

  #about {
    flex: 1 1 100%;
    padding-left: 0;
  }

  #contactInfo {
    width: 100%;
    text-align: left;
    padding-left: 0;
    margin-bottom: 15px;
  }

  #projects {
    flex-direction: column;
    align-items: stretch;
    margin: 0 20px;
  }

  #projects div {
    width: 100%;
    height: 150px;
  }

  #projects div span {
    top: 125px;
  }

  .projectText,
  .upperSection {
    float: none;
    width: 100%;
    max-width: 100%;
    margin-right: 0;
  }

  .back {
    float: none;
    display: block;
    margin-bottom: 15px;
  }
}

/* Mobile breakpoint */
@media (max-width: 480px) {
  h1 {
    font-size: 20pt;
    text-align: center;
  }

  #about {
    font-size: 10pt;
    line-height: 1.5;
  }

  #contactInfo {
    text-align: center;
  }

  .projectTitle {
    font-size: 18pt;
  }
}

